<resources>
    <string name="app_name">mobile project</string>
    <string name="today">Today</string>
    <string name="today1">Today\s Events</string>
    <string name="future_events">Future Events</string>
    <string name="description">Description:</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="select_date">Select Date</string>
    <string name="alarm">Alarm?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title:</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
</resources>