<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="197dp"
            android:layout_height="54dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="132dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="197dp"
            android:layout_height="67dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="195dp"
            android:layout_height="68dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="106dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="132dp"
            android:text="@string/end_date"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/timeStart"
            android:layout_width="106dp"
            android:layout_height="68dp"
            android:layout_marginTop="4dp"
            android:text="@string/start_time"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/dateButton" />

        <Button
            android:id="@+id/timeEnd"
            android:layout_width="110dp"
            android:layout_height="63dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/end_time"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/timeStart" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="229dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="304dp"
            android:layout_height="55dp"
            android:layout_marginStart="28dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="130dp"
            android:layout_height="41dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/alarm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="30dp"
            android:text="@string/save"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="30dp"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="83dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="224dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="196dp"
            android:layout_height="53dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <Button
            android:id="@+id/startDateButton"
            android:layout_width="110dp"
            android:layout_height="57dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/start_date"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>